`link_taxa`: return the most relevant classification for 2 taxa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(get_classification)
 export(get_classification_buk)
+export(link_taxa)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(tibble,tibble)
