`get_classification()` will be a single function for simlicity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@
 
 export("%>%")
 export(get_classification)
-export(get_classification_buk)
 export(link_taxa)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(tibble,tibble)
