--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: taxospace
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: 
     person("Ondrej", "Mottl", , "ondrej.mottl@gamil.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9796-5081"))
@@ -10,10 +10,15 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
+    assertthat,
     dplyr,
+    janitor,
     lifecycle,
     magrittr,
     purrr,
+    readr,
+    rlang,
+    stringr,
     taxize,
     tibble,
     tidyr
